# ChangeLog for dev-java/tomcat-servlet-api
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.87 2011/02/12 19:53:24 xarthisius Exp $

  12 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  tomcat-servlet-api-6.0.32.ebuild:
  ppc/ppc64 stable wrt #329937

*tomcat-servlet-api-6.0.32 (10 Feb 2011)

  10 Feb 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +tomcat-servlet-api-6.0.32.ebuild:
  Version bump

*tomcat-servlet-api-7.0.8 (10 Feb 2011)

  10 Feb 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +tomcat-servlet-api-7.0.8.ebuild:
  Version bump

  02 Feb 2011; Miroslav Šulc <fordfrog@gentoo.org>
  tomcat-servlet-api-7.0.6.ebuild:
  Fixed download url

*tomcat-servlet-api-7.0.6 (30 Jan 2011)

  30 Jan 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +tomcat-servlet-api-7.0.6.ebuild:
  Version bump

  22 Dec 2010; Alistair Bush <ali_bush@gentoo.org>
  tomcat-servlet-api-7.0.5.ebuild:
  Fix url.

  21 Dec 2010; Alistair Bush <ali_bush@gentoo.org> +files/3.0-build.xml,
  +tomcat-servlet-api-7.0.5.ebuild:
  Version Bump.

*tomcat-servlet-api-7.0.5 (21 Dec 2010)

  21 Dec 2010; Alistair Bush <ali_bush@gentoo.org> +files/3.0-build.xml,
  +tomcat-servlet-api-7.0.5.ebuild:
  Version Bump

*tomcat-servlet-api-6.0.29 (31 Aug 2010)

  31 Aug 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  +tomcat-servlet-api-6.0.29.ebuild:
  Version bump.

*tomcat-servlet-api-6.0.28 (10 Jul 2010)

  10 Jul 2010; Petteri Räty <betelgeuse@gentoo.org>
  +tomcat-servlet-api-6.0.28.ebuild:
  Version bump.

  24 Apr 2010; Fabian Groffen <grobian@gentoo.org>
  tomcat-servlet-api-3.ebuild, tomcat-servlet-api-4.1.36.ebuild:
  Marked ~sparc-solaris ~x86-solaris, bug #314093

  29 Mar 2010; Markus Meier <maekke@gentoo.org>
  tomcat-servlet-api-6.0.26.ebuild:
  amd64 stable, bug #303719

  29 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  tomcat-servlet-api-6.0.26.ebuild:
  stable x86, security bug 303719
