@@ -1,6 +1,10 @@
 # ChangeLog for www-servers/tomcat
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.242 2011/02/12 19:55:34 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.243 2011/02/13 00:53:49 fauli Exp $
+
+  13 Feb 2011; Christian Faulhammer <fauli@gentoo.org>
+  tomcat-6.0.32-r1.ebuild:
+  stable x86, security bug 329937
 
   12 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   tomcat-6.0.32-r1.ebuild:
