@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/tomcat-servlet-api
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.87 2011/02/12 19:53:24 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.88 2011/02/13 00:49:52 fauli Exp $
+
+  13 Feb 2011; Christian Faulhammer <fauli@gentoo.org>
+  tomcat-servlet-api-6.0.32.ebuild:
+  stable x86, security bug 329937
 
   12 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   tomcat-servlet-api-6.0.32.ebuild:
